proper time field naming

--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@
 													if (!data.is_matching)
 														$("#match_status").text("Not matching!");
 													else
-														$("#match_status").text("Match! (in "+data.time+" ms)");
+														$("#match_status").text("Match! (in "+data.time_to_parse+" ms)");
 													$("#btn_parse").css('color', 'green');
 													var text=$('#text').val();
 													$("#marked_texts").empty();
