add possibility to PUT rules

--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 			<br />
 			Identifier (optional):<br /> <input
 			type="text" id="tag_identifier" size=100 /> <br />
-			Annotation template:<br /> <input
+			Annotation annotationTemplate:<br /> <input
 			type="text" id="tag_annotation" size=100 /> <br />
 		<button type="button" id="btn_addtag">Add tag</button>
 	</form>
